--- a/your-app/package.json
+++ b/your-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "your-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
@@ -16,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "json-server": "json-server --watch db.json --port 3030",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.1",
+    "json-server": "^0.15.0"
+  },
+  "proxy": "http://localhost:3030"
 }
